rearrange todo list(now plural)

--- a/core/todo
+++ b/core/todo
@@ -1,4 +1,4 @@
 - logger for Horizon
 - generalized logo and other branding shit -- ask team?
 - make this shit work!
-- test run dir
+- test run dir -- root proj
