Base Horizon implementation

--- a/core/todo
+++ b/core/todo
@@ -1,5 +1,7 @@
 - generalized logo and other branding shit -- ask team?
-- make this shit work!
-- test run dir -- root proj
 - builtin runtime patches
 - api -- serviceloader? classloader access? instrumentation access?
+- outline in readme the classloader hierarchy
+- make ObjectTree API that can read universally tree-data-like-structs and replace the api we currently use in Horizon for that
+- Use new API to create plugin trees which allow for sub plugins to be loaded and also dependencies
+- all mixin priorities to 1
