--- a/core/todo
+++ b/core/todo
@@ -6,3 +6,4 @@
 - change JIJ impl in core to match new version of JIJ in kotlin plugin
 - rewrite plugins command override to be more version compatible
 - document which Minecraft versions work, and try and fix as many as possible
+- can we try and figure out how to target normal paper plugins in mixins?
