--- a/core/todo
+++ b/core/todo
@@ -1,7 +1,6 @@
-- generalized logo and other branding shit -- ask team? -- should be done Wednesday
 - document which Minecraft versions work, and try and fix as many as possible
 - can we try and figure out how to target normal paper plugins in mixins?
-- finish horizon api docs
+- javadocs
 - dependency declaration of horizon plugins, and incompatibilities
     - add ability to depend on JDK versions, ASM versions, Horizon versions, and maybe Mixin versions?
 - go through internal todos
