Rewrite Horizon plugins

--- a/core/todo
+++ b/core/todo
@@ -3,3 +3,5 @@
 - dependency declaration of horizon plugins, and incompatibilities
     - add ability to depend on JDK versions, ASM versions, Horizon versions, and maybe Mixin versions?
 - go through internal todos
+- document the plugin injection support in readme
+- dependency declaration of horizon plugins, and incompatibilities
